css/responsive.css
@media (min-width: 900px) {
	/* IMAGE CAPTIONS */
	section.content div.inner .img-caption {
		position: relative;
		z-index: 0;
		margin: 4em 10% 4em 10%;
	}
	
	section.content div.inner .img-caption span {
		position: absolute;
		top: 0;
		left: 0;
		z-index: 1;
		width: 50%;
		height: 50%;
		color: #ffffff;
		text-align: left;
		line-height: 1.5;
		font-size: 0.85em;
		padding: 1em 8em 0 1em;
		background-color: transparent;
	}
	
	section.content div.inner .img-caption span:before {
		display: block;
		position: absolute;
		z-index: -1;
		width: 100%;
		top: -2em;
		left: -1.5em;
		content: url(../img/caption-left.svg);
	}
	
	section.content div.inner .right span {
		top: auto;
		left: auto;
		ottom: 0;
		right: 0;
		height: auto;
		text-align: right;
		padding: 0 1em 1em 7em;
	}
	
	section.content div.inner .right span:before {
		top: auto;
		bottom: 0;
		left: auto;
		right: -2em;
		bottom: -1.5em;
		content: url(../img/caption-right.svg);
	}
	
	section.content div.inner .left-bottom span {
		top: auto;
		left: auto;
		bottom: 0;
		left: 0;
		height: auto;
		text-align: left;
		padding: 0 7em 1em 1em;
	}
	
	section.content div.inner .left-bottom span:before {
		top: auto;
		bottom: 0;
		right: auto;
		left: -2em;
		bottom: -1.5em;
		content: url(../img/caption-left-bottom.svg);
	}
	
	section.content div.inner .right-top span {
		left: auto;
		right: 0;
		padding: 1em 1em 0 8em;
		text-align: right;
	}
	
	section.content div.inner .right-top span:before {
		z-index: -1;
		left: auto;
		right: -1.5em;
		content: url(../img/caption-right-top.svg);
	}
}	
	
@media (max-width: 1000px) {
	body div.inner {
		width: 100%;
	}
	
	section.content div.inner {
		width: 100%;
	}
	
	body,
	body span.section-header, 
	body a.toc-item,
	header {
		font-size: 1.9rem;
	}
	
	section#contact div#icons a {
		width: 7.5rem;
		height: 7.5rem;
		padding: 1.8rem;
	}
	
	section.content div.inner span.date {
		margin-bottom: 3em;
	}
	
}

@media (max-width: 750px) {
	section#introduction {
		min-height: 89vh;
	}
	
	section > div.inner {
		padding-top: 2.5em;
	}
	
	body,
	body span.section-header, 
	body a.toc-item,
	header {
		font-size: 1.7rem;
	}
	
	div#welcome-text {
		width: 100%;
	}
	
	section#project-top div#picture {
		float: none;
		position: static;
		margin: 2em auto 2em auto;
	}
	
	section#projects-experience div.inner a {
		flex: 0 0 calc(100%);
		margin-right: 0;
		margin-bottom: 1.5em;
	}
	
	section#contact div#icons a {
		width: 6.5rem;
		height: 6.5rem;
		padding: 1.5rem;
	}
	
	/* Show circles */
	/*
	section#projects-experience div.inner a > span:before {
		transform: scale(1);
		background-color: #F9C776;
	} */
	
	section#contact div#icons a,
	section#contact div#icons a {
		transform: scale(1);
		background-color: #2854A7;
	}
	
	section#contact div#icons a svg.logo-path,
	section#contact div#icons a svg.logo-path {
		fill: #ffffff;
	}
	
	section#project-top {
		color: #ffffff;
		background-color: #2854A7;
		position: relative;
		overflow: hidden;
		padding-top: 1.5em;
		padding-bottom: 2em;
	}
	
	section.content div.inner img.scaled {
		width: 70%;
	}
	
	div#insteed {
		padding-top: 1.5em;
		flex-direction: column;
	}
	
	div#instafeed div {
		width: 80%;
		margin: 0 auto 0 auto !important;
	}
	
	div#instafeed div span {
		opacity: 1 !important;
		left: 0 !important;
		margin: -20% auto 20% auto;
		position: relative !important;
		width: auto !important;
		font-size: 1em !important;
		padding: 0.4em 0.8em 0.5em 0.8em !important;
		height: auto !important;
		display: tale !important;
		border-radius: 3em;
	}
	
	footer a {
		padding-top: 1rem;
		padding-bottom: 1rem;
	}
}

@media (max-width: 600px) {
	section.content div.inner img.scaled {
		width: 90%;
	}
	
	section.content div.inner .img-caption {
		width: 100%;
	}
}

